# 20240719_extend_python_with_the_power_and_safety_of_rust

./: .gitignore  Cargo.toml  README.md
demos/01_py_hello_world/: Cargo.toml  README.md  pyproject.toml
demos/01_py_hello_world/src/: lib.rs
demos/02_py_type_conversion_traits/: Cargo.toml  README.md  app.py  py_type_conversion_traits.pyi  pyproject.toml
demos/02_py_type_conversion_traits/src/: lib.rs
demos/03_py_parallelism/: Cargo.toml  README.md  pyproject.toml
demos/03_py_parallelism/py_parallelism/: __init__.py  py_parallelism.pyi
demos/03_py_parallelism/src/: lib.rs
demos/03_py_parallelism/tests/: test_word_count.py
demos/04_py_async/: Cargo.toml  README.md  app.py  pyproject.toml
demos/04_py_async/src/: lib.rs
demos/py_rust_welcome/: Cargo.toml  pyproject.toml
demos/py_rust_welcome/src/: lib.rs
