[package]
name = "py_type_conversion_traits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "py_type_conversion_traits"
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.38"
pyo3 = { version = "0.20.0", features = ["chrono"] }
